# IOT---Mechanical-Analog-Vehicle-Diagnostic-Station

./: .gitignore  README.md  partitions.csv
include/: project_config.h
main/: CMakeLists.txt  http_client.c  main.c  status_led.c  status_led.h  utils.c  wifi_station.c
modules/ble_service/: CMakeLists.txt  ble_internal.h  ble_server.h  ble_server_core.c  ble_services.c
modules/button/: CMakeLists.txt  button.c  button.h
modules/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
modules/i2c_master_bus/: CMakeLists.txt  i2c_master_bus.c  i2c_master_bus.h
modules/mqtt_client/: mqtt_client_app.c
modules/sensor_tasks/: CMakeLists.txt  adxl345_task.c  adxl345_task.h  bmp280_task.c  bmp280_task.h  max6675_task.c  max6675_task.h  veml7700_task.c  veml7700_task.h
modules/sensors/: CMakeLists.txt  adxl345.c  adxl345.h  bmp280.c  bmp280.h  hcsr04.c  hcsr04.h  max6675.c  max6675.h  veml7700.c  veml7700.h
modules/spi_master_bus/: CMakeLists.txt  spi_master_bus.c  spi_master_bus.h
modules/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
modules/wifi_station/: wifi_station.c  wifi_station.h
