idf_component_register(
    SRCS
        main.c
    INCLUDE_DIRS
        "."
    REQUIRES
        wifi_station
        http_client
        mqtt_client
        sensors
        storage
        ble_service
        status_led
        buzzer
    PRIV_REQUIRES
        nvs_flash
        wifi_station
        status_led
        http_client
        freertos
        log
        spiffs
        storage_manager
        ble_service
)