idf_component_register(
    SRCS
        main.c
    INCLUDE_DIRS
        "."
    REQUIRES
        mqtt_client
        sensors
        sensor_tasks
        storage
        buzzer
        i2c_master_bus
        spi_master_bus
    PRIV_REQUIRES
        nvs_flash
        wifi_station
        status_led
        http_client
        freertos
        log
        spiffs
        storage_manager
        ble_service
        button
)