idf_component_register(
    SRCS
        main.c
    INCLUDE_DIRS
        "."
    REQUIRES
        sensors
        sensor_tasks
        storage
        buzzer
    PRIV_REQUIRES
        nvs_flash
        wifi_station
        status_led
        http_client
        freertos
        log
        spiffs
        storage_manager
        ble_service
        button
        mqtt_client
)